@@ -321,6 +321,7 @@ View Specific Actions
 	 preferred merge tool. See the manpage of git-mergetool(1).
 |!	|Checkout file with unstaged changes. This will reset the file to
 	 contain the content it had at last commit.
+|Ctrl-u	|Stage single diff line.
 |@	|Move to next chunk in the stage view.
 |]	|Increase the diff context.
 |[	|Decrease the diff context.
